<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fg.UserFragment">


    <include
        android:id="@+id/include_title_app"
        layout="@layout/title_bar_fg_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_info"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        style="@style/CardView.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_title_app"
        android:layout_marginTop="@dimen/dp_5"
        android:foreground="?android:attr/selectableItemBackground"
        android:stateListAnimator="@drawable/lift_on_touch"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardElevation="@dimen/dp_4"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_user_head"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:src="@drawable/test_img_head_round"
              />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black_text"
                android:text="Slim Shady"
                android:textStyle="bold"
                android:textSize="@dimen/sp_16"
                android:layout_marginStart="@dimen/dp_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_user_head"
                />

            <TextView
                android:id="@+id/tv_enterprise_name"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/black_text"
                android:text="一定发财股份科技有限公司"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintEnd_toStartOf="@id/iv_user_head"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                />

            <ImageView
                android:id="@+id/iv_certificate_icon"
                android:layout_width="@dimen/dp_14"
                android:layout_height="@dimen/dp_14"
                android:src="@drawable/img_certificate_icon"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_enterprise_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_enterprise_name"/>

            <TextView
                android:id="@+id/tv_certificate_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已认证"
                android:textColor="@color/qhy_blue"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_5"
                android:textSize="@dimen/sp_13"
                app:layout_constraintStart_toEndOf="@+id/iv_certificate_icon"
                app:layout_constraintTop_toTopOf="@+id/iv_certificate_icon"
                app:layout_constraintBottom_toBottomOf="@+id/iv_certificate_icon"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <!--钱包-->

    <ImageView
        android:id="@+id/iv_wallet"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:src="@drawable/img_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_user_info" />
    <TextView
        android:id="@+id/tv_wallet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="@string/wallet"
        android:textColor="@color/black_text"
        android:textSize="@dimen/sp_17"
        app:layout_constraintBottom_toBottomOf="@id/iv_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_wallet"
        app:layout_constraintTop_toTopOf="@+id/iv_wallet" />

    <!--文件-->
    <View
        android:id="@+id/view_line2"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/bg_all"
        app:layout_constraintEnd_toEndOf="@id/tv_wallet"
        app:layout_constraintStart_toStartOf="@id/iv_wallet"
        app:layout_constraintTop_toBottomOf="@+id/iv_wallet" />
    <ImageView
        android:id="@+id/iv_file"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/img_file"
        app:layout_constraintStart_toStartOf="@id/view_line2"
        app:layout_constraintTop_toBottomOf="@+id/view_line2" />
    <TextView
        android:id="@+id/tv_file"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="@string/file"
        android:textColor="@color/black_text"
        android:textSize="@dimen/sp_17"
        app:layout_constraintBottom_toBottomOf="@id/iv_file"
        app:layout_constraintEnd_toEndOf="@id/view_line2"
        app:layout_constraintStart_toEndOf="@id/iv_file"
        app:layout_constraintTop_toTopOf="@+id/iv_file" />

    <!--组织信息-->
    <View
        android:id="@+id/view_line3"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/bg_all"
        app:layout_constraintEnd_toEndOf="@id/tv_file"
        app:layout_constraintStart_toStartOf="@id/iv_file"
        app:layout_constraintTop_toBottomOf="@+id/iv_file" />
    <ImageView
        android:id="@+id/iv_organization_info"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/img_orgnization_structure"
        app:layout_constraintStart_toStartOf="@id/view_line3"
        app:layout_constraintTop_toBottomOf="@+id/view_line3" />
    <TextView
        android:id="@+id/tv_organization_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="@string/orgnization_info"
        android:textColor="@color/black_text"
        android:textSize="@dimen/sp_17"
        app:layout_constraintBottom_toBottomOf="@id/iv_organization_info"
        app:layout_constraintEnd_toEndOf="@id/view_line3"
        app:layout_constraintStart_toEndOf="@id/iv_organization_info"
        app:layout_constraintTop_toTopOf="@+id/iv_organization_info" />


    <View
        android:id="@+id/view_line4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/bg_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_organization_info" />


    <!-- 我的群组 -->
    <ImageView
        android:id="@+id/iv_help_center"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/img_help"
        app:layout_constraintStart_toStartOf="@id/iv_organization_info"
        app:layout_constraintTop_toBottomOf="@+id/view_line4" />
    <TextView
        android:id="@+id/tv_help_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="@string/help"
        android:textColor="@color/black_text"
        android:textSize="@dimen/sp_17"
        app:layout_constraintBottom_toBottomOf="@id/iv_help_center"
        app:layout_constraintEnd_toEndOf="@id/view_line3"
        app:layout_constraintStart_toEndOf="@id/iv_help_center"
        app:layout_constraintTop_toTopOf="@+id/iv_help_center" />

    <!-- 推荐给朋友 -->
    <View
        android:id="@+id/view_line5"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/bg_all"
        app:layout_constraintEnd_toEndOf="@id/tv_help_center"
        app:layout_constraintStart_toStartOf="@id/iv_help_center"
        app:layout_constraintTop_toBottomOf="@+id/iv_help_center" />
    <ImageView
        android:id="@+id/iv_share_to_friend"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/img_share_to"
        app:layout_constraintStart_toStartOf="@id/view_line5"
        app:layout_constraintTop_toBottomOf="@+id/view_line5" />
    <TextView
        android:id="@+id/tv_share_to_friend"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="@string/share_to_friend"
        android:textColor="@color/black_text"
        android:textSize="@dimen/sp_17"
        app:layout_constraintBottom_toBottomOf="@id/iv_share_to_friend"
        app:layout_constraintEnd_toEndOf="@id/view_line5"
        app:layout_constraintStart_toEndOf="@id/iv_share_to_friend"
        app:layout_constraintTop_toTopOf="@+id/iv_share_to_friend" />

    <View
        android:id="@+id/view_line6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/bg_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_share_to_friend" />

    <!-- 设置 -->
    <ImageView
        android:id="@+id/iv_setting"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/img_setting"
        app:layout_constraintStart_toStartOf="@id/iv_share_to_friend"
        app:layout_constraintTop_toBottomOf="@+id/view_line6" />
    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="@string/setting"
        android:textColor="@color/black_text"
        android:textSize="@dimen/sp_17"
        app:layout_constraintBottom_toBottomOf="@id/iv_setting"
        app:layout_constraintEnd_toEndOf="@id/tv_share_to_friend"
        app:layout_constraintStart_toEndOf="@id/iv_setting"
        app:layout_constraintTop_toTopOf="@+id/iv_setting" />




</androidx.constraintlayout.widget.ConstraintLayout>